--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sjlportfolio22",
+  "homepage":"http://yukidev.com/sjlakinportfolio2022/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
